Added graphml export

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -397,7 +397,7 @@
    "source": [
     "## Visualisation\n",
     "\n",
-    "Seaborn is one of many Python visualisation libraries. "
+    "Seaborn is one of many Python visualisation libraries and it supports a few graph and chart types from the box. "
    ]
   },
   {
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 69,
    "id": "7c5f433e",
    "metadata": {},
    "outputs": [
@@ -480,17 +480,15 @@
        "4       psforscher       1"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#count the number of tweets to use for the bar chart\n",
-    "from matplotlib.pyplot import bar\n",
-    "\n",
-    "\n",
     "frequency = tweets_df[\"user.screen_name\"].value_counts()\n",
+    "\n",
     "#convert the series of counts back to a data frame for Seaborn.\n",
     "barplot_df = pd.DataFrame({\"ScreenName\": frequency.index, \"Tweets\": frequency.values})\n",
     "\n",
@@ -499,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 70,
    "id": "0d330d73",
    "metadata": {},
    "outputs": [
@@ -509,7 +507,7 @@
        "<AxesSubplot: xlabel='ScreenName', ylabel='Tweets'>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -638,10 +636,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 72,
    "id": "46a0f275",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "nx.write_graphml(graph, \"/Users/iain/Desktop/riot.graphml\")"
+   ]
   }
  ],
  "metadata": {
