Removed the path for grpahml

--- a/RIOT_Science_Club.ipynb
+++ b/RIOT_Science_Club.ipynb
@@ -644,7 +644,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nx.write_graphml(graph, \"/Users/iain/Desktop/riot.graphml\")"
+    "nx.write_graphml(graph, \"riot.graphml\")"
    ]
   }
  ],
